--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
             <h2><strong>Person</strong>Wealth</h2>
         </main>
     </div>
-    <script src="app,js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
